force-app/main/default/objects/Disposition__c/fields/NDA_Status__c.field-meta.xml
<CustomField>
    <!--
        THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY - see NDA_Broker__c
        .field-meta.xml in this folder for the full reasoning behind this field group
        (formula fields over an unproven Related Record component, why a FlexiPage cannot
        traverse Primary_NDA__r directly).

        TEXT(picklist), not a Picklist type - a formula field cannot itself be a picklist type
        whose values are computed; wrapping in TEXT() is the standard pattern for surfacing a
        related record's picklist value.
    -->
    <fullName>NDA_Status__c</fullName>
    <description>The primary NDA's Status__c, read through Primary_NDA__c. Blank before a primary NDA exists.</description>
    <formula>TEXT(Primary_NDA__r.Status__c)</formula>
    <inlineHelpText>The status of the primary NDA for this disposition. Read-only; derived.</inlineHelpText>
    <label>NDA Status</label>
    <type>Text</type>
</CustomField>