force-app/main/default/objects/Disposition__c/fields/Net_Sale_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Net_Sale_Proceeds__c</fullName>
    <formula>Gross_Sale_Proceeds__c - Selling_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Sale Proceeds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>