force-app/main/default/objects/Disposition__c/fields/Package_Sent__c.field-meta.xml
<CustomField>
    <fullName>Package_Sent__c</fullName>
    <label>Package Sent</label>
    <type>Date</type>
</CustomField>