force-app/main/default/objects/Disposition__c/fields/Primary_NDA__c.field-meta.xml
<CustomField>
    <fullName>Primary_NDA__c</fullName>
    <!--
        Decision D16.2 (Tranche 3A). The disposition twin of Opportunity.Primary_NDA__c,
        whose shape this file copies. This comment is INSIDE the root element on purpose:
        a comment above the root breaks `sf` at source conversion.

        THE STAMP IS LOAD-BEARING, NOT BOOKKEEPING. The NDA auto-create trigger writes
        this when it creates the disposition's NDA, and downstream automation resolves the
        NDA it acts on THROUGH this lookup. An NDA created without the stamp leaves the
        resolution with nothing to find, and the failure is silent - the same shape as the
        Underwriting-gate defect that Opportunity.Primary_LOI__c was added to prevent.

        🔴 THE PARAGRAPH ABOVE WAS FALSE FOR ONE DAY AND IS TRUE AGAIN AS OF 2026-08-26.
        THE FIELD HAS A READER: the NDA Details section on Disposition_Record_Page names
        SPANNING field items straight through this lookup (Record.Primary_NDA__r.Status__c,
        __r.Broker__c, __r.Date_Sent__c, __r.Date_Signed__c, __r.NDA_Expiry_Date__c,
        __r.Tracking_Status__c). That is a DIFFERENT reader from the one the paragraph
        describes - it is a page, not automation - but the consequence is the same one it
        warns about: a missing stamp renders the section BLANK, silently.
        ⚠ NOTE WHAT DID NOT COME BACK. The five NDA_*__c FORMULA mirror fields on this object
        stay deleted; the section reads the NDA record directly. So this lookup, and NOT a
        formula, is the whole dependency.
        ⚠ AND THE SPANNING READ MOVED THE FLS QUESTION ONTO THE CHILD: NDA__c.Date_Sent__c and
        NDA__c.NDA_Expiry_Date__c had NO grant in any disposition permission set (only the
        acquisition ones), which the formulas had been masking. Both were added read-only to
        DPEG_Disposition_View and DPEG_Disposition_Edit on 2026-08-26.

        ── THE 2026-08-25 "NO READER" FINDING, KEPT BECAUSE IT IS QUOTED ELSEWHERE ──
        For one day NOTHING IN THIS REPO READ THIS FIELD. A full grep of force-app on
        2026-08-25 found exactly four kinds of reference and no reader:
          - DispositionNdaStampQueueable, which WRITES it;
          - DispositionStageEntryService, which enqueues that job;
          - DispositionStageEntryServiceTest, which asserts the write landed;
          - comments.
        The "downstream automation" the paragraph describes is the OPPORTUNITY twin's:
        NDA_Signed_Before_Deal_Progression reads Opportunity.Primary_NDA__r.NDA_Signed__c,
        and NdaSelector's primary-NDA method is documented against Opportunity. Neither
        touches Disposition__c. The five NDA_*__c formula fields that DID span this lookup,
        and the NDA-stage Details section on Disposition_Record_Page that rendered them, were
        deleted on 2026-08-25 (manifest/remove-disposition-child-mirrors/) when the user
        retired the child-mirror idea. So this lookup was, for that day, bookkeeping.
        🔴 THAT WINDOW CLOSED ON 2026-08-26 - see the amendment at the top. The NDA Details
        section was rebuilt on SPANNING items and reads this lookup again.

        ⚠ THE RETENTION ARGUMENT BELOW WAS WRITTEN FOR THE "NO READER" DAY AND IS NOW
        BELT-AND-BRACES RATHER THAN THE WHOLE CASE. It is kept because every reason in it is
        still independently true, and because the blast-radius list at the end is the thing a
        future deletion proposal needs. Three reasons, none of them "it might be needed later":
          1. It PRE-DATES the mirror work by several tranches (D16.2 / Tranche 3A). The
             user's decision named the fields created for the LOI/PSA/NDA Details sections;
             this is not one of them.
          2. ELEVEN other class headers across the disposition Apex layer cite
             DispositionNdaStampQueueable as the canonical worked example of the
             ENTITY_IS_LOCKED -> defer-to-Queueable pattern (DispositionOfferTriggerHandler,
             DispositionApprovalAdvanceService, DispositionBrokerStampService,
             ContractExecutionService, PropertyAssetService, OfferingService and others).
             Deleting the field deletes that class and turns every one of those citations
             into a pointer at nothing.
          3. Deleting a lookup is a destructive, data-losing change; keeping an unread one
             costs one guarded enqueue per NDA auto-create and nothing else.
        🔴 IF SOMEONE DECIDES TO REMOVE IT, THAT IS A SEPARATE CHANGE NEEDING ITS OWN
        SIGN-OFF, and its blast radius is this field + DispositionNdaStampQueueable + the
        enqueue in DispositionStageEntryService.openBuyerNdas + two tests
        (stampQueueableWithNothingToDoIsANoOp and the stamp assertions around it) + the
        eleven header citations above + the read-only grants in DPEG_Disposition_Edit,
        DPEG_Disposition_View and DPEG_Admin_Access.
        ⚠ THAT LIST GAINED AN ENTRY ON 2026-08-26 AND IS NO LONGER COMPLETE AS WRITTEN: the
        NDA fieldSection in Disposition_Record_Page.flexipage-meta.xml now spans this lookup
        with six field items, and a visibilityRule that shows the section when the child exists.
        Deleting the field breaks the page. Re-derive the list from a grep rather than trusting
        this one.
        ⚠ THAT RULE TESTS Primary_NDA__r.Name, NOT Primary_NDA__c, AND A GREP FOR THE FIELD NAME
        WILL THEREFORE MISS IT. Measured 2026-08-26: a FlexiPage criterion REFUSES the NE operator
        on a reference field ("'Primary_NDA__c' is a reference field, which doesn't support the NE
        operator"), so the not-blank test is written against the child's AutoNumber Name spanned
        through this lookup. Grep for `Primary_NDA__r` as well as `Primary_NDA__c`.

        relationshipName is PrimaryDispositions, so the child relationship it creates on
        NDA__c does not collide with PrimaryOpportunities (Opportunity.Primary_NDA__c).

        deleteConstraint is SetNull, matching the Opportunity twin: deleting an NDA must
        clear the pointer, never cascade into the disposition.

        FLS is read-only in every set that carries it, because the trigger is the writer.
    -->
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary NDA for this disposition - stamped by the NDA auto-create automation and spanned by the NDA Details section on the record page (Record.Primary_NDA__r.*) since 2026-08-26. The NDA_*__c formula mirrors it once fed were deleted 2026-08-25 and are not coming back; see this field&apos;s comment for the one-day window in which nothing read it at all.</description>
    <inlineHelpText>Set automatically when the disposition NDA is created, so it is not maintained by hand.</inlineHelpText>
    <label>Primary NDA</label>
    <referenceTo>NDA__c</referenceTo>
    <relationshipLabel>Dispositions (Primary NDA)</relationshipLabel>
    <relationshipName>PrimaryDispositions</relationshipName>
    <type>Lookup</type>
</CustomField>