force-app/main/default/objects/Disposition__c/fields/Property_Asset__c.field-meta.xml
<CustomField>
    <fullName>Property_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Asset</label>
    <referenceTo>Property_Asset__c</referenceTo>
    <relationshipLabel>Dispositions</relationshipLabel>
    <relationshipName>Dispositions</relationshipName>
    <type>Lookup</type>
</CustomField>