force-app/main/default/objects/Disposition__c/fields/PSA_Ball_In_Court__c.field-meta.xml
<CustomField>
    <!--
        THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY - see Primary_LOI__c
        .field-meta.xml in this folder for the full reasoning behind this field group (why a
        lookup + formula pair rather than an Apex-backed LWC, and what it retracts).

        ADDED 2026-08-25. One of NINE formula fields mirroring the primary LOI's / primary
        PSA's own fields onto Disposition__c, shaped on the FIVE NDA_*__c fields already in
        this folder - read NDA_Broker__c.field-meta.xml for why a FORMULA is the route that
        makes this solvable at all (a FlexiPage fieldInstance cannot traverse a relationship;
        a formula can).

        TEXT(picklist), same pattern as NDA_Status__c. Values are Us / Seller / Buyer.
        ⚠ 'Us' IS READ FROM THE CONTRACT RECORD'S OWN POINT OF VIEW, which on a disposition is
        DPEG as the seller. Nothing here re-frames it for the disposition reader; the string is
        passed through exactly as stored.

        🔴 FLS: THIS FIELD IS INVISIBLE TO EVERYONE, ADMINS INCLUDED, UNTIL A PERMSET LANDS.
        Read-only in BOTH DPEG_Disposition_Edit and DPEG_Disposition_View - a formula field
        cannot carry editable = true (hard deploy error). This file and both permission sets
        must land together.
    -->
    <fullName>PSA_Ball_In_Court__c</fullName>
    <description>The primary PSA's Ball_In_Court__c, read through Primary_PSA__c. Blank before a primary PSA exists or before it is set.</description>
    <formula>TEXT(Primary_PSA__r.Ball_In_Court__c)</formula>
    <inlineHelpText>Who currently owes the next move on the primary PSA. Read-only; derived.</inlineHelpText>
    <label>PSA Ball In Court</label>
    <type>Text</type>
</CustomField>