force-app/main/default/objects/Disposition__c/fields/PSA_Executed__c.field-meta.xml
<CustomField>
    <fullName>PSA_Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSA Executed</label>
    <type>Checkbox</type>
</CustomField>