force-app/main/default/objects/Disposition__c/fields/PSA_Execution_Date__c.field-meta.xml
<CustomField>
    <!--
        THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY - see Primary_LOI__c
        .field-meta.xml in this folder for the full reasoning behind this field group.

        ADDED 2026-08-25. One of NINE formula fields mirroring the primary LOI / primary PSA
        onto Disposition__c. Shape copied from NDA_Date_Sent__c in this folder: a Date formula
        that is a bare cross-object reference carries NO formulaTreatBlanksAs - there is no
        arithmetic for it to affect, and a null parent renders blank.

        ⚠ THIS IS NOT A DATE VERSION OF THE EXISTING PSA_Executed__c CHECKBOX AND THE TWO ARE NOT
        SYNCHRONISED. PSA_Executed__c is a plain checkbox set on the DISPOSITION; this field
        reads Execution_Date__c off the Contract_Review__c row through Primary_PSA__c. They can
        legitimately disagree, and nothing in this change reconciles them - see
        Primary_PSA__c.field-meta.xml for why inventing that rule was deliberately not done.

        🔴 FLS: read-only in BOTH DPEG_Disposition_Edit and DPEG_Disposition_View - a formula
        field cannot carry editable = true (hard deploy error). Invisible to everyone, admins
        included, until those permission sets land with this file.
    -->
    <fullName>PSA_Execution_Date__c</fullName>
    <description>The primary PSA's Execution_Date__c, read through Primary_PSA__c. Blank before a primary PSA exists or before it is executed. Distinct from the PSA_Executed__c checkbox on this object.</description>
    <formula>Primary_PSA__r.Execution_Date__c</formula>
    <inlineHelpText>The date the primary PSA was executed, from the Contract Review record. Read-only; derived.</inlineHelpText>
    <label>PSA Execution Date</label>
    <type>Date</type>
</CustomField>