force-app/main/default/objects/Disposition__c/fields/PSA_Negotiation_Status__c.field-meta.xml
<CustomField>
    <!--
        THIS COMMENT SITS INSIDE THE ROOT ELEMENT DELIBERATELY - see Primary_LOI__c
        .field-meta.xml in this folder for the full reasoning behind this field group (why a
        lookup + formula pair rather than an Apex-backed LWC, and what it retracts).

        ADDED 2026-08-25. One of NINE formula fields mirroring the primary LOI's / primary
        PSA's own fields onto Disposition__c, shaped on the FIVE NDA_*__c fields already in
        this folder - read NDA_Broker__c.field-meta.xml for why a FORMULA is the route that
        makes this solvable at all (a FlexiPage fieldInstance cannot traverse a relationship;
        a formula can).

        TEXT(picklist), same pattern as NDA_Status__c.
        🔴 THIS IS THE PSA'S REAL STATE FIELD, NOT PSA_Stage__c BESIDE IT. Contract_Review__c
        .Stage__c is RECOMPUTED by the active before-save flow Contract_Review_Stage_Sync from
        Negotiation_Status__c, which is why DispositionStageEntryService seeds
        Negotiation_Status__c and never Stage__c. Read this one first.

        🔴 FLS: THIS FIELD IS INVISIBLE TO EVERYONE, ADMINS INCLUDED, UNTIL A PERMSET LANDS.
        Read-only in BOTH DPEG_Disposition_Edit and DPEG_Disposition_View - a formula field
        cannot carry editable = true (hard deploy error). This file and both permission sets
        must land together.
    -->
    <fullName>PSA_Negotiation_Status__c</fullName>
    <description>The primary PSA's Negotiation_Status__c, read through Primary_PSA__c. Blank before a primary PSA exists.</description>
    <formula>TEXT(Primary_PSA__r.Negotiation_Status__c)</formula>
    <inlineHelpText>The negotiation status of the primary PSA for this disposition. Read-only; derived.</inlineHelpText>
    <label>PSA Negotiation Status</label>
    <type>Text</type>
</CustomField>