force-app/main/default/objects/Disposition__c/fields/Responses_Received__c.field-meta.xml
<CustomField>
    <fullName>Responses_Received__c</fullName>
    <label>Responses Received</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>