force-app/main/default/objects/Disposition__c/fields/Selected_Broker__c.field-meta.xml
<CustomField>
    <fullName>Selected_Broker__c</fullName>
    <label>Selected Broker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>