force-app/main/default/objects/Disposition__c/fields/Sell_Decision_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Sell_Decision_Trigger__c</fullName>
    <label>Sell Decision Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sell Meter Green</fullName>
                <default>true</default>
                <label>Sell Meter Green</label>
            </value>
            <value>
                <fullName>Principal Decision</fullName>
            </value>
            <value>
                <fullName>Fund Maturity</fullName>
            </value>
            <value>
                <fullName>Market Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>